# bondi

./: .cz.json  .extropy.db  .gitignore  .golangci.yml  .ocamlformat  CONTRIBUTING.md  Dockerfile  README.md  USAGE.md  bondi.opam  dune-project  justfile
.cursor/rules/: opam-switch.mdc
.github/actions/ocaml-deps/: action.yaml
.github/actions/push-docker-image/: action.yaml
.github/actions/update-homebrew-formula/: action.yaml
.github/workflows/: commitizen.yaml  golangci-lint.yaml  lint.yaml  main.yaml  pr.yaml  release-dry-run.yaml  release.yaml
.github/worklows/: golangci-lint.yml   pr.yaml
cli/: go.sum
cli/cmd/: deploy.go  docker.go  init.go  root.go  setup.go  status.go  status_test.go
cli/internal/config/: config.go  config_test.go
cli/internal/docker/: docker.go
cli/internal/ssh/: remoterun.go
hurl_tests/: deploy.hurl  health.hurl  hurl.just  run.hurl  status.hurl
lib/client/: bondi_client.ml  cli.ml  config_file.ml  dune
lib/client/cmd/: deploy.ml  docker.ml  docker_common.ml  docker_logs.ml  docker_ps.ml  init.ml  setup.ml  status.ml
lib/common/: alloy_river.ml  alloy_river.mli  defaults.ml  dune  json_utils.ml  string_utils.ml
lib/server/: bondi_server.ml  crontab.ml  deploy.ml  dune  env.ml  health.ml  json_helpers.ml  run.ml  server.ml  server_config.ml  status.ml
lib/server/docker/: alloy.ml  alloy.mli  client.ml  traefik.ml
lib/server/strategy/: blue_green.ml  simple.ml
old_go/cli/: go.mod  main.go
old_go/cli/cmd/: deploy.go  docker.go  init.go  setup.go
old_go/cli/internal/docker/: docker.go
old_go/server/: Dockerfile  go.mod  go.sum  main.go
old_go/server/internal/deployment/: handler_test.go
old_go/server/internal/deployment/models/: models.go
old_go/server/internal/deployment/strategies/: simple.go
old_go/server/internal/docker/: client.go
packaging/homebrew/: bondi.rb
server/: main.go
server/deployment/: handler.go  handler_test.go
server/deployment/strategies/: simple.go  strategy.go
server/docker/: client.go  docker.go
server/health/: health.go
server/internal/deployment/: handler.go  handler_test.go
server/internal/deployment/models/: models.go
server/internal/deployment/strategies/: simple.go  strategy.go
server/internal/docker/: client.go
server/internal/docker/traefik/: traefik.go
server/internal/health/: health.go  health_test.go
server/internal/status/: handler.go  handler_test.go
server/traefik/: traefik.go
test/: dune
test/client/: dune  test_config_file.ml  test_deploy_helpers.ml  test_setup_plan.ml  test_status_format.ml
test/common/: dune  test_alloy_river.ml  test_defaults.ml  test_json_utils.ml  test_string_utils.ml
test/cram/: alloy_config.t  deploy_args.t  deploy_config.t  docker_args.t  docker_config.t  dune  help.t  init.t  setup_config.t  status_config.t  status_output.t  unknown_command.t  version.t
test/server/: dune  server_test_helpers.ml  test_alloy_config.ml  test_blue_green_plan.ml  test_crontab.ml  test_deploy.ml  test_docker_client.ml  test_env.ml  test_json_helpers.ml  test_run.ml  test_simple_plan.ml  test_status_plan.ml
