(include_subdirs qualified)

(rule
 (targets version.ml)
 (deps
  (env_var BONDI_VERSION))
 (action
  (bash
   "printf 'let value = \"%s\"\\n' \"${BONDI_VERSION:-dev}\" > version.ml")))

(library
 (name bondi_client)
 (public_name bondi.client)
 (libraries
  bondi.common
  cmdliner
  base64
  cohttp
  cohttp-eio
  eio
  eio_main
  uri
  unix
  mustache
  yaml
  yojson
  ppx_deriving_yojson)
 (preprocess
  (pps ppx_deriving_yojson)))
